Shows you which triangle type it is

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<label for="side3Length">Length of side 3</label>
 				<input id="side3Length" class="form-control" type="text">
 			</div>
+			<button type="submit" class="btn">What triangle is it?</button>
 		</form>
 	</body>
 
